--- a/style.css
+++ b/style.css
@@ -1,51 +1,36 @@
 
 *{
-    box-sizing: content-box;
+
 }
 
 body {
     background-color: black;
-}
-.contenedor{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5rem;
-    margin: auto;
     color: white;
-
-
-
 }
+
 
 .imagen{
-    width: 500px;
-    border: 5px solid rgb(0, 0, 0);
-    font-size: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 15px;
-    background-color: rgb(20, 18, 18);
-    padding: 50px;
-    padding-top: 0;
-    border: 1px solid rgb(255, 255, 255);
+    width: 100px;
+    height: 500px;
+    border: 3px solid rgba(146, 81, 155, 0.234);
     transition: all 1s;
+
+}   
+
+img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
-
-
-
-.imagen p{
-    font-size: 18px;
-    
-}
-
-
 
 .imagen:hover{
-    width: 600px;
-
-    background-color: rgb(48, 48, 48);
-    
+    border: 3px solid rgb(255, 255, 255);
+    width: 300px;
 }
+
+
+
+
+
+
 
