--- a/style.css
+++ b/style.css
@@ -5,47 +5,67 @@
 
 body {
     background-color: black;
-}
-.contenedor{
+    margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 5rem;
+}
+
+
+.instruciones{
+
     margin: auto;
+    margin-top: 1rem;
     color: white;
-
-
+    width: 70vh;
+    border: 1px solid white;
+    border-radius: 15px;
+}
+.conteiner{
+ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
 
 }
 
-.imagen{
-    width: 500px;
-    border: 5px solid rgb(0, 0, 0);
+.titulo{
+    position: absolute;
+    color: white;
+    z-index: 50;
+    width: 100%;
+    height: 20%;
+    bottom: 0;
+    text-align: center;
     font-size: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 15px;
-    background-color: rgb(20, 18, 18);
-    padding: 50px;
-    padding-top: 0;
-    border: 1px solid rgb(255, 255, 255);
+    opacity: 0;
+    background-color: black;
     transition: all 1s;
 }
 
 
+.item:hover .titulo{
+  opacity: 1;
+}
 
-.imagen p{
-    font-size: 18px;
-    
+.fila{
+    display: flex;
+
 }
 
 
+.item{
+    position: relative;
+    padding: 5px;
+   width: 130px;
+   border-radius: 15px;
 
-.imagen:hover{
-    width: 600px;
-
-    background-color: rgb(48, 48, 48);
-    
 }
 
+.item img{
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
