--- a/style.css
+++ b/style.css
@@ -14,38 +14,12 @@ body {
     margin: auto;
     color: white;
 
-
+    font-size: 10rem;
 
 }
 
-.imagen{
-    width: 500px;
-    border: 5px solid rgb(0, 0, 0);
-    font-size: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 15px;
-    background-color: rgb(20, 18, 18);
-    padding: 50px;
-    padding-top: 0;
-    border: 1px solid rgb(255, 255, 255);
-    transition: all 1s;
+
+a{ 
+    color: white;
+
 }
-
-
-
-.imagen p{
-    font-size: 18px;
-    
-}
-
-
-
-.imagen:hover{
-    width: 600px;
-
-    background-color: rgb(48, 48, 48);
-    
-}
-
