--- a/style.css
+++ b/style.css
@@ -20,12 +20,26 @@ body {
 }
 
 
+
+
+.anime{
+    background-color: rgb(0, 0, 0);
+    height: 30vh;
+    padding: 2rem;
+    border-radius: 2rem;
+    border: 2px solid rgba(34, 255, 0, 0.26);
+}
+
+
+H1{
+    font-size: 2rem;
+}
 .link{
-    border:  1px solid white;
+    border:  1px solid rgb(0, 162, 255);
     border-radius: 1rem;
     background-color:#143B43 ;
     font-size: 5rem;
-    padding: 1rem;
+
 }
 
 a{ 
