--- a/style.css
+++ b/style.css
@@ -1,49 +1,56 @@
 
-*{
-    box-sizing: content-box;
-}
+
 
 body {
+    background-color: rgb(49, 46, 46);
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.preguntas{
+    height: 100vh;
     background-color: black;
-}
-.contenedor{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5rem;
-    margin: auto;
-    color: white;
-
-    font-size: 10rem;
-
-    font-family: 'Courier New', Courier, monospace;
-}
-
-
-
-
-.anime{
-    background-color: rgb(0, 0, 0);
-    height: 30vh;
-    padding: 2rem;
+    padding:2rem;
+    font-size: 2rem;
+    margin: 2rem;
+    margin-bottom: 50vh;
     border-radius: 2rem;
-    border: 2px solid rgba(34, 255, 0, 0.26);
+}
+.capitulos{
+    color: white;
+    padding: 1rem;
+    background-color: rgb(6, 6, 6);
+    border-radius: 1rem;
 }
 
-
-H1{
+.capitulo{
+    display: flex;
+    padding: 1rem;
+    background-color: rgb(24, 24, 24);
+    border: 1px solid rgb(95, 95, 95);
+    border-radius: 5px;
+    font-weight: bold;
+    align-items: center;
+    
+}
+.titulo{
     font-size: 2rem;
 }
-.link{
-    border:  1px solid rgb(0, 162, 255);
-    border-radius: 1rem;
-    background-color:#143B43 ;
-    font-size: 5rem;
 
+
+
+.capitulo:hover{
+    background-color: orange;
 }
+.capitulo a{
 
-a{ 
+    
     color: white;
-
-
+    text-decoration: none;
 }
+.capitulo img{
+  width: 30px;
+  padding-right: 10px;
+}
+
+
+
