--- a/style.css
+++ b/style.css
@@ -26,45 +26,72 @@ ul{
     display:  flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    margin-top: 10rem;
+    gap: 1rem;
+ 
     height: 100vh;
 
 
 }
-
-.fila{
-
-
-    height: 180px;
+.video-conteiner{
     width: 500px;
+    height:400px;
+ 
+    padding: 20px;
+    background-color: rgb(20, 20, 20);
+    border-radius: 15px;
+}
+.video{
+    border-radius: 15px;
+    overflow: hidden;
+    height: 280px;
+    width: 500px;   
+ 
     display: flex;
 
 }
-.fila1{
 
-    height: 100px;
-}
-.fila2{
-    height: 100px;
-}
-.fila3{
 
-    height: 300px;
+.detalles{
 
-}
+    display: flex;
+    padding: 1rem;
 
-.item{
-    width: 100%;
-}
-
-.item:hover{
-    border: 3px solid rgb(0, 229, 255);
+    
+    align-items: center;
 }
 
 img{
     width: 100%;
-    height:100%;
+    height: 100%;
     object-fit: cover;
+}
 
+.titulo{
+    font-size: 1.5rem;
+}
+
+.perfil{
+    min-height: 50px;
+    min-width: 50px;
+    height: 50px;
+    width: 50px;
+    border-radius: 200px;
+    overflow: hidden;
+    margin-right: 1rem;
+    
+}
+
+
+.autor{
+    padding-left: 5rem;
+    color: gray;
+}
+
+
+.vistas{
+    padding-left: 5rem;
+    color: gray;
+    text-align: start;
+
+    width: 100%;
 }
