--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ ul{
 .conteiner{
     display:  flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     gap: 1rem;
  
@@ -32,66 +33,55 @@ ul{
 
 
 }
-.video-conteiner{
-    width: 500px;
-    height:400px;
- 
-    padding: 20px;
-    background-color: rgb(20, 20, 20);
-    border-radius: 15px;
-}
-.video{
-    border-radius: 15px;
-    overflow: hidden;
-    height: 280px;
-    width: 500px;   
- 
+
+.imagenes{
+    width: 600px;
     display: flex;
-
-}
-
-
-.detalles{
-
-    display: flex;
-    padding: 1rem;
+    gap: 1rem
 
     
-    align-items: center;
 }
 
-img{
+.imagen{
+    width: 200px;
+    height: 200px;
+    transition: all 0.5s;
+}
+
+.imagen img:hover{
+    border: 2px solid rgb(191, 0, 255);
+}
+
+
+.imagen img{
+    border-radius: 15px;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
+
+
+
 .titulo{
-    font-size: 1.5rem;
+    display: flex;
+    font-size: 2rem;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  
 }
 
-.perfil{
-    min-height: 50px;
-    min-width: 50px;
-    height: 50px;
-    width: 50px;
-    border-radius: 200px;
-    overflow: hidden;
-    margin-right: 1rem;
-    
+.letra{
+    transition: all 0.5s;
 }
-
-
-.autor{
-    padding-left: 5rem;
-    color: gray;
+.subtitulo{
+    font-size: 1rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
 }
 
 
-.vistas{
-    padding-left: 5rem;
-    color: gray;
-    text-align: start;
+.letra:hover{
+    font-size: 2.5rem;
+    color: purple;
 
-    width: 100%;
 }
